--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,31 +1,23 @@
 {# Footer #}
 <div class="container">
-    {# TODO: replace these by dynamic generation #}
+    {% block social %}
+    {% if SOCIAL %}
     <ul class="footer-social-media">
+        {% for social_item in SOCIAL %}
         <li>
-            <a href="https://www.linkedin.com/in/maartentegelaers">
+            <!-- {{ social_item[0] }} -->
+            <a href="{{ social_item[1] }}">
                 <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                    <i class="fa {{ social_item[2] }} fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
         </li>
-        <li>
-            <a href="https://github.com/BeardedPlatypus">
-                <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
-                </span>
-            </a>
-        </li>
-        <li>
-            <a href="https://www.youtube.com/user/Month3d">
-                <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-youtube-play fa-stack-1x fa-inverse"></i>
-                </span>
-            </a>
-        </li>
+        {% endfor %}
     </ul>
+    {% endif %}
+    {% endblock %}
+    {% block copyright %}
     <p class="copyright-notice">Copyright © Maarten Tegelaers 2016</p>
+    {% endblock %}
 </div>
