--- a/static/css/rubber-octopus.scss
+++ b/static/css/rubber-octopus.scss
@@ -1,20 +1,7 @@
-/* ============================================= */
-/*  Table of contents                            */
-/* ============================================= */
-/*  1. Variables                                 */
-/*     - colours                                 */
-/*     - fonts                                   */
-/*  2. General Elements                          */
-/*  3. Navigation                                */
-/* ============================================= */
-
-
-/* --------------------------------------------- */
-/*  1. Navigation                                */
-/* --------------------------------------------- */
-// Colours 
-// Shades of grey
-// dark: 1 -> light: 5
+// -----------------------------------------------------------------------------
+//  Variables
+// -----------------------------------------------------------------------------
+// Colours
 $grey1: #181A1E;
 $grey2: #282D33;
 $grey3: #404752;
@@ -27,9 +14,10 @@ $grey5: #BED4F2;
     font-weight: $weight;
 }
 
-/* --------------------------------------------- */
-/*  2. General Elements                          */
-/* --------------------------------------------- */
+// -----------------------------------------------------------------------------
+// Elements
+// -----------------------------------------------------------------------------
+// Main
 html {
     position: relative;
     min-height: 100%;
@@ -42,9 +30,7 @@ body {
     margin-bottom: 5em;
 }
 
-/* --------------------------------------------- */
-/*  3. Navigation                                */
-/* --------------------------------------------- */
+// Navigation
 #banner {
     background: $grey2;
     padding: 4.0em 0em 1.0em 0em;
@@ -105,9 +91,7 @@ body {
     width: 100%
 }
 
-/* --------------------------------------------- */
-/*  4. Article                                   */
-/* --------------------------------------------- */
+// Article
 .article {
     
 }
@@ -199,9 +183,7 @@ body {
     margin-bottom: 2.2em;
 }
 
-/* --------------------------------------------- */
-/*  5. Footer                                    */
-/* --------------------------------------------- */
+// Footer
 .copyright-notice {
     @include source-sans-pro(300);
     color: $grey2;
