--- a/templates/base.html
+++ b/templates/base.html
@@ -1,68 +1,42 @@
 <!DOCTYPE html>
 <html lang="{{ DEFAULT_LANG }}">
 <head>
-    {% block head %}
-    {# --------------------------------------------------------------- #}
-    {# Meta statements #}
+
     <meta charset="utf-8" />
     <meta name="viewport"  content="width=device-width, initial-scale=1">
 
     <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
 
-    {# --------------------------------------------------------------- #}
-    {# Css definitions #}
-    <link href="{% if page %}../{% endif %}theme/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700' rel='stylesheet' type='text/css'>
-
-    {# Custom Css #}
-    <link href="{% if page %}../{% endif %}theme/css/rubber-octopus.css"  rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    {# --------------------------------------------------------------- #}
-    {# Feed declerations #}
-    {% if FEED_ALL_ATOM %}
-    <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Full Atom Feed" />
-    {% endif %}
-    {% if FEED_ALL_RSS %}
-    <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_RSS }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} Full RSS Feed" />
-    {% endif %}
-    {% if FEED_ATOM %}
-    <link href="{{ FEED_DOMAIN }}/{{ FEED_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Atom Feed" />
-    {% endif %}
-    {% if FEED_RSS %}
-    <link href="{{ FEED_DOMAIN }}/{{ FEED_RSS }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
-    {% endif %}
-    {% if CATEGORY_FEED_ATOM and category %}
-    <link href="{{ FEED_DOMAIN }}/{{ CATEGORY_FEED_ATOM|format(category.slug) }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Categories Atom Feed" />
-    {% endif %}
-    {% if CATEGORY_FEED_RSS and category %}
-    <link href="{{ FEED_DOMAIN }}/{{ CATEGORY_FEED_RSS|format(category.slug) }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} Categories RSS Feed" />
-    {% endif %}
-    {% if TAG_FEED_ATOM and tag %}
-    <link href="{{ FEED_DOMAIN }}/{{ TAG_FEED_ATOM|format(tag.slug) }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Tags Atom Feed" />
-    {% endif %}
-    {% if TAG_FEED_RSS and tag %}
-    <link href="{{ FEED_DOMAIN }}/{{ TAG_FEED_RSS|format(tag.slug) }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} Tags RSS Feed" />
-    {% endif %}
-    {% endblock head %}
+    {# ---------------------------------------------------------------------- #}
+    {# CSS definitions #}
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700'
+          rel='stylesheet'
+          type='text/css'>
+    <link rel="stylesheet"
+          href="{% if page %}../{% endif %}theme/css/rubber-octopus.css"  >
 </head>
 
-<body id="index" class="home">
-    {# --------------------------------------------------------------- #}
-    {# Header  #}
+<body>
+    {# ---------------------------------------------------------------------- #}
+    {# Header #}
+    {% import 'nav.html' as navigation with context %}
+
     <header id="banner" class="body">
-        {% include 'nav.html' %}
-    </header><!-- /#banner -->
-    {# --------------------------------------------------------------- #}
+        {% block nav %}
+        {{ navigation.render() }}
+        {% endblock %}
+    </header>
+
+
+    {# ---------------------------------------------------------------------- #}
     {# Body #}
-    <div class="containter">
+    <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 {% block content %}
@@ -70,16 +44,21 @@
             </div>
         </div>
     </div>
-    {# --------------------------------------------------------------- #}
+
+    {# ---------------------------------------------------------------------- #}
     {# Footer #}
-    <footer id="contentinfo" class="body sticky-footer">
+    <footer id="contentinfo"  class="body sticky-footer">
         {% include 'footer.html' %}
-    </footer><!-- /#contentinfo -->
+    </footer>
 
-    {# jQuery Version 1.11.1 #}
-    <script src="js/jquery.js"></script>
+    {# ---------------------------------------------------------------------- #}
+    {# JS definitions #}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
+    </script>
 
-    {# Bootstrap Core JavaScript #}
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous">
+    </script>
 </body>
 </html>
