--- a/templates/components/nav.html
+++ b/templates/components/nav.html
@@ -1,4 +1,4 @@
-{# Navigation #}
+{#-- Navigation --#}
 {% macro render(brand="Monthy's Blog", link="#") -%}
 <nav id="site-navigation" class="navbar navbar-inverse" role="navigation">
     <div class="container" >
