--- a/templates/base.html
+++ b/templates/base.html
@@ -15,17 +15,21 @@
           crossorigin="anonymous">
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    {#
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700'
           rel='stylesheet'
           type='text/css'>
+    #}
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:300,400"
+          rel="stylesheet">
     <link rel="stylesheet"
-          href="{% if page %}../{% endif %}theme/css/rubber-octopus.css"  >
+          href="{% if page or tag or tags %}../{% endif %}theme/css/rubber-octopus.css"  >
 </head>
 
 <body>
     {# ---------------------------------------------------------------------- #}
     {# Header #}
-    {% import 'nav.html' as navigation with context %}
+    {% import 'components/nav.html' as navigation with context %}
 
     <header id="banner" class="body">
         {% block nav %}
@@ -36,19 +40,18 @@
 
     {# ---------------------------------------------------------------------- #}
     {# Body #}
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                {% block content %}
-                {% endblock %}
-            </div>
-        </div>
+    <div class="col-lg-12">
+        <section class="ro-body body"
+                 id="content">
+            {% block content %}
+            {% endblock %}
+        </section>
     </div>
 
     {# ---------------------------------------------------------------------- #}
     {# Footer #}
     <footer id="contentinfo"  class="body sticky-footer">
-        {% include 'footer.html' %}
+        {% include 'components/footer.html' %}
     </footer>
 
     {# ---------------------------------------------------------------------- #}
