--- a/templates/components/nav.html
+++ b/templates/components/nav.html
@@ -13,10 +13,15 @@
                 <span class="icon-bar" ></span>
             </button>
 
+            <a class="navbar-logo" href="{{ link }}">
+                <img src="./theme/img/header.png" alt={{ brand }}>
+            </a>
+            {# --
             <a class="navbar-brand"
                href="{{ link }}">
                 {{ brand }}
             </a>
+            -- #}
         </div>
 
         {% if DISPLAY_PAGES_ON_MENU %}
