--- a/templates/article.html
+++ b/templates/article.html
@@ -5,8 +5,8 @@
 
 {% block content %}
 <div class="container" >
-    <div class="row" >
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+    <div class="row justify-content-center">
+        <div class="col-8">
             {{ art.render(article, preview=False) }}
         </div>
     </div>
