--- a/templates/categories.html
+++ b/templates/categories.html
@@ -12,8 +12,8 @@
 {% endblock %}
 
 <div class="container" >
-    <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1" >
+    <div class="row justify-content-center">
+        <div class="col-8">
             {% for cat in categories %}
             <div class="row
                         ro-categories-element">
