--- a/templates/tag.html
+++ b/templates/tag.html
@@ -14,8 +14,8 @@
 
 {# Article list #}
 <div class="container" >
-    <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1" >
+    <div class="row justify-content-center">
+        <div class="col-8">
             {% for article in articles_page.object_list %}
             {{ art.render(article, preview=True) }}
             {% endfor %}
