--- a/templates/tags.html
+++ b/templates/tags.html
@@ -11,8 +11,8 @@
 
 {% block content_title %}
 <div class="container" >
-    <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1" >
+    <div class="row justify-content-center">
+        <div class="col-8">
             {% for tag in tag_cloud %}
             <div class="row
                         ro-categories-element">
